@@ -140,8 +140,7 @@ The following environment variables are also consulted:
   \item[a] ("allocation_policy")
     The policy used for allocating in the OCaml heap. Possible values
     are "0" for the next-fit policy, "1" for the first-fit
-    policy, and "2" for the best-fit policy. Best-fit is still experimental,
-    but probably the best of the three. The default is "0" (next-fit).
+    policy, and "2" for the best-fit policy. The default is "2" (best-fit).
     See the Gc module documentation for details.
   \item[s] ("minor_heap_size")  Size of the minor heap. (in words)
   \item[i] ("major_heap_increment")  Default size increment for the
